// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, truecolor light 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                                    
 │ Lunch at Zomato Bangalore                                                                                                       │  ◇ food  ████████░ 92%                                             
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯    llm:gpt-4                                                       
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                                                                                                 
  ▄ Netflix monthly                                                                                                                   [1]  food  ✓                                                      
  █ Salary credit October                                                                                                             [2]  travel                                                       
                                                                                                                                      [3]  other                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, 256-color light 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                                    
 │ Lunch at Zomato Bangalore                                                                                                       │  ◇ food  ████████░ 92%                                             
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯    llm:gpt-4                                                       
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                                                                                                 
  ▄ Netflix monthly                                                                                                                   [1]  food  ✓                                                      
  █ Salary credit October                                                                                                             [2]  travel                                                       
                                                                                                                                      [3]  other                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, 16-color light (markers) 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐                                                                    
 │ ▶ Lunch at Zomato Bangalore                                                                                                     │  ◇ food  ########- 92%                                             
 └─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘    llm:gpt-4                                                       
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                                                                                                 
  ▄ Netflix monthly                                                                                                                   [1]  food  ✓                                                      
  █ Salary credit October                                                                                                             [2]  travel                                                       
                                                                                                                                      [3]  other                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;

exports[`slice 3.1: responsive split layout at width >= 160 snapshot: split layout at 200x24, truecolor dark 1`] = `
"                                                                                                                                                                                                        
  LabelLens  tiny.jsonl  Pending  1 / 10                                                                                                               Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                                                                                                                        
 ╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                                                                    
 │ Lunch at Zomato Bangalore                                                                                                       │  ◇ food  ████████░ 92%                                             
 ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯    llm:gpt-4                                                       
  █ Uber ride to airport                                                                                                                                                                                
  ▆ Amazon order #12345                                                                                                                                                                                 
  ▄ Netflix monthly                                                                                                                   [1]  food  ✓                                                      
  █ Salary credit October                                                                                                             [2]  travel                                                       
                                                                                                                                      [3]  other                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
                                                                                                                                                                                                        
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note                                                                                       [gd] doc ┊[Q] queues ┊[:] palette ┊[t] stats ┊[?] help  
                                                                                                                                                                                                        
"
`;
